loads of updates

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 		<header>
 			<hgroup>
 				<h1 class='center'>Gravity</h1>
-				<h2 class='center serif'>A framework for beautiful websites</h2>
+				<h2 class='center'>A framework for beautiful websites</h2>
 			</hgroup>
 		</header>
 	</section>
@@ -45,7 +45,7 @@
 	<section>
 		<div class='col third'><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat laboris nisi ut aliquip.</p></div>
 		<div class='col third'><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat laboris nisi ut aliquip.</p></div>
-		<div class='col third last'><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat laboris nisi ut aliquip.</p></div>
+		<div class='col third'><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat laboris nisi ut aliquip.</p></div>
 	</section>
 	
 	<section>
@@ -70,7 +70,7 @@
 			   <li>Vestibulum auctor dapibus neque.</li>
 			</ul>
 		</div>
-		<div class='col fourth last'>
+		<div class='col fourth'>
 			<ul>
 			   <li>Lorem ipsum dolor</li>
 			   <li>Aliquam tincidunt mauris eu risus.</li>
@@ -84,7 +84,7 @@
 		<div class='col fifth'><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat laboris nisi ut aliquip.</p></div>
 		<div class='col fifth'><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat laboris nisi ut aliquip.</p></div>
 		<div class='col fifth'><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat laboris nisi ut aliquip.</p></div>
-		<div class='col fifth last'><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat laboris nisi ut aliquip.</p></div>
+		<div class='col fifth'><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat laboris nisi ut aliquip.</p></div>
 	</section>
 	
 	<section>
@@ -93,11 +93,11 @@
 		<div class='col sixth'><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p></div>
 		<div class='col sixth'><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p></div>
 		<div class='col sixth'><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p></div>
-		<div class='col sixth last'><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p></div>
+		<div class='col sixth'><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p></div>
 	</section>
 	
 	<footer itemscope>
-		<p><a itemprop="email" href='http://www.owainlewis.com'>Owain Lewis</a></p>
+		<p><a itemprop="email" href='http://www.owainlewis.com'>GravityFramework.com</a></p>
 	</footer>
 	
 </div>
