--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html class="no-js">
 <head>	
-<!--[if IE]><script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
 <meta charset="utf-8">
 <title>Website Title</title>
 <meta name="description" content="">
 <meta name="author" content="">
+
+<!--[if IE]><script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
 
 <!-- Mobile -->
 <meta name="viewport" content="width=device-width;"/>
@@ -13,13 +14,6 @@
 
 <!-- CSS -->
 <link rel="stylesheet" href="stylesheets/style.css" type="text/css" />
-
-<!-- JAVACRIPT -->
-<!-- jQuery <script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script> -->
-<!-- Moo Tools <script src='https://ajax.googleapis.com/ajax/libs/mootools/1.3.1/mootools-yui-compressed.js'></script> -->
-
-<script src='js/core.js'></script>
-<script src='js/main.js'></script>
 
 </head>
 
@@ -101,6 +95,23 @@
 	</footer>
 	
 </div>
+
+<!-- Javascript at the bottom of page for faster loading -->
+
+<!-- jQuery <script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script> -->
+<!-- Moo Tools <script src='https://ajax.googleapis.com/ajax/libs/mootools/1.3.1/mootools-yui-compressed.js'></script> -->
+
+<script src='js/lib/modernizr-1.7.min.js'></script>
+<script src='js/core.js'></script>
+<script src='js/main.js'></script>
+
+<!-- Change UA-XXXXX-X to be your site's ID -->
+  <script>
+    var _gaq=[["_setAccount","UA-XXXXX-X"],["_trackPageview"]];
+    (function(d,t){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];g.async=1;
+    g.src=("https:"==location.protocol?"//ssl":"//www")+".google-analytics.com/ga.js";
+    s.parentNode.insertBefore(g,s)}(document,"script"));
+  </script>
 
 <!--End HTML-->
 </body>
