added lots of new functionality

--- a/examples/pagelements.html
+++ b/examples/pagelements.html
@@ -66,6 +66,24 @@
 		</dl>
 		
 	</section>
+	
+	<section id='forms'>
+		
+		<form>
+			<fieldset>
+				<legend>Default Forms</legend>
+				<input type='text' placeholder='text input' class='large' />
+				<textarea placeholder='placeholder text' class='large'></textarea>	
+			</fieldset>
+		</form>
+	</section>
+	
+	<section id='buttons'>
+		<h3>User Interface Elements</h3>
+		<a class='button small'>Button</a>
+		<a class='button medium'>Button</a>
+		<a class='button large '>Button</a>
+	</section>
 
 	<section id='tables'>	
 		<table>
