--- a/index.html
+++ b/index.html
@@ -96,22 +96,21 @@
 	
 </div>
 
-<!-- Javascript at the bottom of page for faster loading -->
+<!-- 
+
+Javascript at the bottom of page for faster loading
+Uncomment the libraries below or delete if not needed
+
+-->
 
 <!-- jQuery <script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script> -->
 <!-- Moo Tools <script src='https://ajax.googleapis.com/ajax/libs/mootools/1.3.1/mootools-yui-compressed.js'></script> -->
+<!-- <script src='http://ajax.cdnjs.com/ajax/libs/backbone.js/0.3.3/backbone-min.js'></script> -->
 
-<script src='js/lib/modernizr-1.7.min.js'></script>
 <script src='js/core.js'></script>
+<script src='http://ajax.cdnjs.com/ajax/libs/modernizr/1.7/modernizr-1.7.min.js'></script> 
+<script src='js/lib/spine.min.js'></script>
 <script src='js/main.js'></script>
-
-<!-- Change UA-XXXXX-X to be your site's ID -->
-  <script>
-    var _gaq=[["_setAccount","UA-XXXXX-X"],["_trackPageview"]];
-    (function(d,t){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];g.async=1;
-    g.src=("https:"==location.protocol?"//ssl":"//www")+".google-analytics.com/ga.js";
-    s.parentNode.insertBefore(g,s)}(document,"script"));
-  </script>
 
 <!--End HTML-->
 </body>
