updated the structure and done some tidying

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 	
 	<section>
 		<div class='col whole'>
-			<p><q>"Gravity is a framework for building rock solid HTML5 websites. It uses SASS to control styles, so make sure you download it before trying this framework. You'll find lots of useful stuff here including an ECMA5 shiv which allows you to use new JavaScript features in older browsers."<cite>Owain Lewis</cite></q></p>
+			<p><q>"Gravity is a framework for building rock solid HTML5 websites. It uses SASS to control styles, so make sure you download it before trying this framework. You'll find lots of useful stuff here including an ECMA5 shiv which allows you to use ECMA5 features in older browsers."</q></p>
 		</div>
 	</section>
 
@@ -91,7 +91,7 @@
 	</section>
 	
 	<footer itemscope>
-		<p><a itemprop="email" href='http://www.owainlewis.com'>GravityFramework.com</a></p>
+		<p><a itemprop="email" href='http://gravityframework.com'>GravityFramework.com</a></p>
 	</footer>
 	
 </div>
@@ -107,9 +107,9 @@ Uncomment the libraries below or delete if not needed
 <!-- Moo Tools <script src='https://ajax.googleapis.com/ajax/libs/mootools/1.3.1/mootools-yui-compressed.js'></script> -->
 <!-- <script src='http://ajax.cdnjs.com/ajax/libs/backbone.js/0.3.3/backbone-min.js'></script> -->
 
-<script src='js/core.js'></script>
 <script src='http://ajax.cdnjs.com/ajax/libs/modernizr/1.7/modernizr-1.7.min.js'></script> 
 <script src='js/lib/spine.min.js'></script>
+<script src='js/core.js'></script>
 <script src='js/main.js'></script>
 
 <!--End HTML-->
