some more core updates

--- a/index.html
+++ b/index.html
@@ -1,16 +1,14 @@
 <!DOCTYPE html>
 <html class="no-js">
+<!--[if IE]><script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
 <head>	
+	
 <meta charset="utf-8">
 <title>Website Title</title>
 <meta name="description" content="">
 <meta name="author" content="">
-
-<!--[if IE]><script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
-
-<!-- Mobile -->
-<meta name="viewport" content="width=device-width;"/>
-<meta name="apple-mobile-web-app-capable" content="yes" />
+<link rel="shortcut icon" href="images/icons/favicon.ico">
+<link rel="apple-touch-icon" href="images/icons/apple-touch-icon.png">
 
 <!-- CSS -->
 <link rel="stylesheet" href="stylesheets/style.css" type="text/css" />
@@ -97,19 +95,17 @@
 </div>
 
 <!-- 
-
 Javascript at the bottom of page for faster loading
 Uncomment the libraries below or delete if not needed
-
 -->
 
-<!-- jQuery <script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script> -->
-<!-- Moo Tools <script src='https://ajax.googleapis.com/ajax/libs/mootools/1.3.1/mootools-yui-compressed.js'></script> -->
+<!-- <script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script> -->
+<!-- <script src='https://ajax.googleapis.com/ajax/libs/mootools/1.3.1/mootools-yui-compressed.js'></script> -->
 <!-- <script src='http://ajax.cdnjs.com/ajax/libs/backbone.js/0.3.3/backbone-min.js'></script> -->
 
 <script src='http://ajax.cdnjs.com/ajax/libs/modernizr/1.7/modernizr-1.7.min.js'></script> 
 <script src='js/lib/spine.min.js'></script>
-<script src='js/core.js'></script>
+<script src='js/lib/underscore.js'></script>
 <script src='js/main.js'></script>
 
 <!--End HTML-->
