--- a/index.html
+++ b/index.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
 <html class="no-js">
-<!--[if IE]><script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
 <head>	
 	
 <meta charset="utf-8">
 <title>Website Title</title>
 <meta name="description" content="">
 <meta name="author" content="">
-<link rel="shortcut icon" href="images/icons/favicon.ico">
-<link rel="apple-touch-icon" href="images/icons/apple-touch-icon.png">
+
+<!--[if IE]><script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
 
 <!-- CSS -->
 <link rel="stylesheet" href="stylesheets/style.css" type="text/css" />
@@ -29,40 +28,45 @@
 	</section>
 	
 	<section>
-		<div class='col whole'>
+		<div class='col-12'>
 			<p><q>"Gravity is a framework for building rock solid HTML5 websites. It uses SASS to control styles, so make sure you download it before trying this framework. You'll find lots of useful stuff here including an ECMA5 shiv which allows you to use ECMA5 features in older browsers."</q></p>
 		</div>
 	</section>
+	
+	<section>
+		<div class='col-6'><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat laboris nisi ut aliquip.</p></div>
+		<div class='col-6'><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat laboris nisi ut aliquip.</p></div>
+	</section>
 
 	<section>
-		<div class='col third'><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat laboris nisi ut aliquip.</p></div>
-		<div class='col third'><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat laboris nisi ut aliquip.</p></div>
-		<div class='col third'><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat laboris nisi ut aliquip.</p></div>
+		<div class='col-4'><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat laboris nisi ut aliquip.</p></div>
+		<div class='col-4'><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat laboris nisi ut aliquip.</p></div>
+		<div class='col-4'><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat laboris nisi ut aliquip.</p></div>
 	</section>
 	
 	<section>
-		<div class='col fourth'>
+		<div class='col-3'>
 			<ul>
 			   <li>Lorem ipsum dolor</li>
 			   <li>Aliquam tincidunt mauris eu risus.</li>
 			   <li>Vestibulum auctor dapibus neque.</li>
 			</ul>
 		</div>
-		<div class='col fourth'>
+		<div class='col-3'>
 			<ul>
 			   <li>Lorem ipsum dolor</li>
 			   <li>Aliquam tincidunt mauris eu risus.</li>
 			   <li>Vestibulum auctor dapibus neque.</li>
 			</ul>
 		</div>
-		<div class='col fourth'>
+		<div class='col-3'>
 			<ul>
 			   <li>Lorem ipsum dolor</li>
 			   <li>Aliquam tincidunt mauris eu risus.</li>
 			   <li>Vestibulum auctor dapibus neque.</li>
 			</ul>
 		</div>
-		<div class='col fourth'>
+		<div class='col-3'>
 			<ul>
 			   <li>Lorem ipsum dolor</li>
 			   <li>Aliquam tincidunt mauris eu risus.</li>
@@ -72,20 +76,58 @@
 	</section>
 	
 	<section>
-		<div class='col fifth'><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat laboris nisi ut aliquip.</p></div>
-		<div class='col fifth'><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat laboris nisi ut aliquip.</p></div>
-		<div class='col fifth'><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat laboris nisi ut aliquip.</p></div>
-		<div class='col fifth'><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat laboris nisi ut aliquip.</p></div>
-		<div class='col fifth'><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat laboris nisi ut aliquip.</p></div>
+		<div class='col-2'>
+			<ul>
+			   <li>Lorem ipsum dolor</li>
+			   <li>Aliquam tincidunt</li>
+			   <li>Vestibulum auctor </li>
+			</ul>
+		</div>
+		<div class='col-2'>
+			<ul>
+			   <li>Lorem ipsum dolor</li>
+			   <li>Aliquam tincidunt</li>
+			   <li>Vestibulum auctor </li>
+			</ul>
+		</div>
+		<div class='col-2'>
+			<ul>
+			   <li>Lorem ipsum dolor</li>
+			   <li>Aliquam tincidunt</li>
+			   <li>Vestibulum auctor </li>
+			</ul>
+		</div>
+		<div class='col-2'>
+			<ul>
+			   <li>Lorem ipsum dolor</li>
+			   <li>Aliquam tincidunt</li>
+			   <li>Vestibulum auctor </li>
+			</ul>
+		</div>
+		<div class='col-2'>
+			<ul>
+			   <li>Lorem ipsum dolor</li>
+			   <li>Aliquam tincidunt</li>
+			   <li>Vestibulum auctor </li>
+			</ul>
+		</div>
+		<div class='col-2'>
+			<ul>
+			   <li>Lorem ipsum dolor</li>
+			   <li>Aliquam tincidunt</li>
+			   <li>Vestibulum auctor </li>
+			</ul>
+		</div>
 	</section>
 	
 	<section>
-		<div class='col sixth'><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p></div>
-		<div class='col sixth'><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p></div>
-		<div class='col sixth'><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p></div>
-		<div class='col sixth'><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p></div>
-		<div class='col sixth'><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p></div>
-		<div class='col sixth'><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p></div>
+		<div class='col-8'>
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat laboris nisi ut aliquip.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat laboris nisi ut aliquip.</p>
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat laboris nisi ut aliquip.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat laboris nisi ut aliquip.</p>
+		</div>
+		<div class='col-4'>
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat laboris nisi ut aliquip</p>
+		</div>
 	</section>
 	
 	<footer itemscope>
@@ -102,11 +144,10 @@ Uncomment the libraries below or delete if not needed
 <!-- <script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script> -->
 <!-- <script src='https://ajax.googleapis.com/ajax/libs/mootools/1.3.1/mootools-yui-compressed.js'></script> -->
 <!-- <script src='http://ajax.cdnjs.com/ajax/libs/backbone.js/0.3.3/backbone-min.js'></script> -->
+<!-- <script src='http://ajax.cdnjs.com/ajax/libs/modernizr/1.7/modernizr-1.7.min.js'></script> -->
 
-<script src='http://ajax.cdnjs.com/ajax/libs/modernizr/1.7/modernizr-1.7.min.js'></script> 
-<script src='js/lib/spine.min.js'></script>
 <script src='js/lib/underscore.js'></script>
-<script src='js/main.js'></script>
+<script src='js/application.js'></script>
 
 <!--End HTML-->
 </body>
