--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class="no-js">
+<html lang="en" class="no-js">
 <head>	
 	
 <meta charset="utf-8">
@@ -7,16 +7,23 @@
 <meta name="description" content="">
 <meta name="author" content="">
 
-<!--[if IE]><script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
+<!--[if lt IE 9]>
+	<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+<![endif]-->
 
 <!-- CSS -->
 <link rel="stylesheet" href="stylesheets/style.css" type="text/css" />
+
+<!-- Mobile Specific Meta Tags -->
+<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" /> 
 
 </head>
 
 <body>
 
 <div id="container">
+	
+<!-- You can delete everything inside this div -->
 
 	<section>
 		<header>
@@ -134,6 +141,8 @@
 		<p><a itemprop="email" href='http://gravityframework.com'>GravityFramework.com</a></p>
 	</footer>
 	
+	
+<!-- End Example Code -->
 </div>
 
 <!-- 
