--- a/index.html
+++ b/index.html
@@ -152,10 +152,10 @@ Uncomment the libraries below or delete if not needed
 
 <!-- <script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script> -->
 <!-- <script src='https://ajax.googleapis.com/ajax/libs/mootools/1.3.1/mootools-yui-compressed.js'></script> -->
-<!-- <script src='http://ajax.cdnjs.com/ajax/libs/backbone.js/0.3.3/backbone-min.js'></script> -->
 <!-- <script src='http://ajax.cdnjs.com/ajax/libs/modernizr/1.7/modernizr-1.7.min.js'></script> -->
 
 <script src='js/lib/underscore.js'></script>
+<script src='http://ajax.cdnjs.com/ajax/libs/backbone.js/0.3.3/backbone-min.js'></script>
 <script src='js/application.js'></script>
 
 <!--End HTML-->
