Changed the javascript structure for more modern mvc type approach

--- a/index.html
+++ b/index.html
@@ -150,12 +150,9 @@ Javascript at the bottom of page for faster loading
 Uncomment the libraries below or delete if not needed
 -->
 
-<!-- <script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script> -->
-<!-- <script src='https://ajax.googleapis.com/ajax/libs/mootools/1.3.1/mootools-yui-compressed.js'></script> -->
-<!-- <script src='http://ajax.cdnjs.com/ajax/libs/modernizr/1.7/modernizr-1.7.min.js'></script> -->
-
-<script src='js/lib/underscore.js'></script>
-<script src='http://ajax.cdnjs.com/ajax/libs/backbone.js/0.3.3/backbone-min.js'></script>
+<script src="http://ajax.cdnjs.com/ajax/libs/json2/20110223/json2.js"></script>
+<script src="http://ajax.cdnjs.com/ajax/libs/underscore.js/1.1.6/underscore-min.js"></script>
+<script src="http://ajax.cdnjs.com/ajax/libs/backbone.js/0.3.3/backbone-min.js"></script>
 <script src='js/application.js'></script>
 
 <!--End HTML-->
