--- a/index.html
+++ b/index.html
@@ -22,134 +22,133 @@
 <body>
 
 <div id="container">
-	
+
 <!-- You can delete everything inside this div -->
 
-	<section>
-		<header>
-			<hgroup>
-				<h1 class='center'>Gravity</h1>
-				<h2 class='center'>A framework for beautiful websites</h2>
-			</hgroup>
-		</header>
-	</section>
-	
-	<section>
-		<div class='col-12'>
-			<p><q>"Gravity is a framework for building rock solid HTML5 websites. It uses SASS to control styles, so make sure you download it before trying this framework. You'll find lots of useful stuff here including an ECMA5 shiv which allows you to use ECMA5 features in older browsers."</q></p>
-		</div>
-	</section>
-	
-	<section>
-		<div class='col-6'><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat laboris nisi ut aliquip.</p></div>
-		<div class='col-6'><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat laboris nisi ut aliquip.</p></div>
-	</section>
+<section>
+  <header>
+    <hgroup>
+      <h1 class='center'>Gravity</h1>
+      <h2 class='center'><q>A framework for beautiful websites</q></h2>
+    </hgroup>
+  </header>
+</section>
 
-	<section>
-		<div class='col-4'><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat laboris nisi ut aliquip.</p></div>
-		<div class='col-4'><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat laboris nisi ut aliquip.</p></div>
-		<div class='col-4'><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat laboris nisi ut aliquip.</p></div>
-	</section>
-	
-	<section>
-		<div class='col-3'>
-			<ul>
-			   <li>Lorem ipsum dolor</li>
-			   <li>Aliquam tincidunt mauris eu risus.</li>
-			   <li>Vestibulum auctor dapibus neque.</li>
-			</ul>
-		</div>
-		<div class='col-3'>
-			<ul>
-			   <li>Lorem ipsum dolor</li>
-			   <li>Aliquam tincidunt mauris eu risus.</li>
-			   <li>Vestibulum auctor dapibus neque.</li>
-			</ul>
-		</div>
-		<div class='col-3'>
-			<ul>
-			   <li>Lorem ipsum dolor</li>
-			   <li>Aliquam tincidunt mauris eu risus.</li>
-			   <li>Vestibulum auctor dapibus neque.</li>
-			</ul>
-		</div>
-		<div class='col-3'>
-			<ul>
-			   <li>Lorem ipsum dolor</li>
-			   <li>Aliquam tincidunt mauris eu risus.</li>
-			   <li>Vestibulum auctor dapibus neque.</li>
-			</ul>
-		</div>
-	</section>
-	
-	<section>
-		<div class='col-2'>
-			<ul>
-			   <li>Lorem ipsum dolor</li>
-			   <li>Aliquam tincidunt</li>
-			   <li>Vestibulum auctor </li>
-			</ul>
-		</div>
-		<div class='col-2'>
-			<ul>
-			   <li>Lorem ipsum dolor</li>
-			   <li>Aliquam tincidunt</li>
-			   <li>Vestibulum auctor </li>
-			</ul>
-		</div>
-		<div class='col-2'>
-			<ul>
-			   <li>Lorem ipsum dolor</li>
-			   <li>Aliquam tincidunt</li>
-			   <li>Vestibulum auctor </li>
-			</ul>
-		</div>
-		<div class='col-2'>
-			<ul>
-			   <li>Lorem ipsum dolor</li>
-			   <li>Aliquam tincidunt</li>
-			   <li>Vestibulum auctor </li>
-			</ul>
-		</div>
-		<div class='col-2'>
-			<ul>
-			   <li>Lorem ipsum dolor</li>
-			   <li>Aliquam tincidunt</li>
-			   <li>Vestibulum auctor </li>
-			</ul>
-		</div>
-		<div class='col-2'>
-			<ul>
-			   <li>Lorem ipsum dolor</li>
-			   <li>Aliquam tincidunt</li>
-			   <li>Vestibulum auctor </li>
-			</ul>
-		</div>
-	</section>
-	
-	<section>
-		<div class='col-8'>
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat laboris nisi ut aliquip.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat laboris nisi ut aliquip.</p>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat laboris nisi ut aliquip.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat laboris nisi ut aliquip.</p>
-		</div>
-		<div class='col-4'>
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat laboris nisi ut aliquip</p>
-		</div>
-	</section>
-	
-	<footer itemscope>
-		<p><a itemprop="email" href='http://gravityframework.com'>GravityFramework.com</a></p>
-	</footer>
-	
-	
+<section>
+  <div class='col-12'>
+    <p><q>"Gravity is a framework for building rock solid HTML5 websites. It uses SASS to control styles, so make sure you download it before   trying this framework. All the typography in this example is set to a 20px baseline grid. Be sure to checkout the various sass mixins, found in lib/helpers/_mixins.scss"</q></p>
+  </div>
+</section>
+
+<section>
+  <div class='col-6'><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat laboris nisi ut aliquip.</p></div>
+  <div class='col-6'><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat laboris nisi ut aliquip.</p></div>
+</section>
+
+<section>
+  <div class='col-4'><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat laboris nisi ut aliquip.</p></div>
+  <div class='col-4'><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat laboris nisi ut aliquip.</p></div>
+  <div class='col-4'><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat laboris nisi ut aliquip.</p></div>
+</section>
+
+<section>
+  <div class='col-3'>
+    <ul>
+      <li>Lorem ipsum dolor</li>
+      <li>Aliquam tincidunt mauris eu risus.</li>
+      <li>Vestibulum auctor dapibus neque.</li>
+  </ul>
+  </div>
+  <div class='col-3'>
+    <ul>
+      <li>Lorem ipsum dolor</li>
+      <li>Aliquam tincidunt mauris eu risus.</li>
+      <li>Vestibulum auctor dapibus neque.</li>
+  </ul>
+  </div>
+  <div class='col-3'>
+    <ul>
+      <li>Lorem ipsum dolor</li>
+      <li>Aliquam tincidunt mauris eu risus.</li>
+      <li>Vestibulum auctor dapibus neque.</li>
+  </ul>
+  </div>
+  <div class='col-3'>
+    <ul>
+      <li>Lorem ipsum dolor</li>
+      <li>Aliquam tincidunt mauris eu risus.</li>
+      <li>Vestibulum auctor dapibus neque.</li>
+  </ul>
+  </div>
+</section>
+
+<section>
+  <div class='col-2'>
+    <ul>
+      <li>Lorem ipsum dolor</li>
+      <li>Aliquam tincidunt</li>
+      <li>Vestibulum auctor </li>
+    </ul>
+  </div>
+  <div class='col-2'>
+    <ul>
+      <li>Lorem ipsum dolor</li>
+      <li>Aliquam tincidunt</li>
+      <li>Vestibulum auctor </li>
+    </ul>
+  </div>
+  <div class='col-2'>
+    <ul>
+      <li>Lorem ipsum dolor</li>
+      <li>Aliquam tincidunt</li>
+      <li>Vestibulum auctor </li>
+    </ul>
+  </div>
+  <div class='col-2'>
+    <ul>
+      <li>Lorem ipsum dolor</li>
+      <li>Aliquam tincidunt</li>
+      <li>Vestibulum auctor </li>
+    </ul>
+  </div>
+  <div class='col-2'>
+    <ul>
+      <li>Lorem ipsum dolor</li>
+      <li>Aliquam tincidunt</li>
+      <li>Vestibulum auctor </li>
+    </ul>
+  </div>
+  <div class='col-2'>
+    <ul>
+      <li>Lorem ipsum dolor</li>
+      <li>Aliquam tincidunt</li>
+      <li>Vestibulum auctor </li>
+    </ul>
+  </div>
+</section>
+
+<section>
+  <div class='col-8'>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat laboris nisi ut aliquip.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat laboris nisi ut aliquip.</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat laboris nisi ut aliquip.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat laboris nisi ut aliquip.</p>
+  </div>
+  <div class='col-4'>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat laboris nisi ut aliquip</p>
+  </div>
+</section>
+
+<footer itemscope>
+  <p>
+    <a itemprop="email" href='http://gravityframework.com'>GravityFramework.com</a>
+  </p>
+</footer>
+
+
 <!-- End Example Code -->
+
 </div>
 
-<!-- 
-Javascript at the bottom of page for faster loading
-Uncomment the libraries below or delete if not needed
--->
-
+<!-- Javascript at the bottom of page for faster loading Uncomment the libraries below or delete if not needed -->
 <script src="http://ajax.cdnjs.com/ajax/libs/json2/20110223/json2.js"></script>
 <script src="http://ajax.cdnjs.com/ajax/libs/underscore.js/1.1.6/underscore-min.js"></script>
 <script src="http://ajax.cdnjs.com/ajax/libs/backbone.js/0.3.3/backbone-min.js"></script>
