updated the javascripts

--- a/index.html
+++ b/index.html
@@ -135,9 +135,9 @@
         </p>
       </footer>
     </div>
-    <script src='http://ajax.cdnjs.com/ajax/libs/json2/20110223/json2.js'></script>
+    <script src='http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js'></script>
     <script src='http://ajax.cdnjs.com/ajax/libs/underscore.js/1.1.6/underscore-min.js'></script>
     <script src='http://ajax.cdnjs.com/ajax/libs/backbone.js/0.3.3/backbone-min.js'></script>
-    <script src='js/application.js'></script>
+    <script src='javascripts/application.js'></script>
   </body>
 </html>
