--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- CSS -->
     <!-- Google Fonts API -->
     <link href='http://fonts.googleapis.com/css?family=Droid+Sans:400,700' rel='stylesheet' type='text/css' />
-    <link href='stylesheets/style.css' rel='stylesheet' type='text/css' />
+    <link href='stylesheets/css/style.css' rel='stylesheet' type='text/css' />
   </head>
   <body>
     <div id='container'>
