--- a/index.html
+++ b/index.html
@@ -1,1 +1,234 @@
-<!DOCTYPE html><html class="no-js" lang="en"><head><meta charset="utf-8"><title>Project Title</title><meta name="description"><meta name="author"><script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script><!-- Mobile Specific Meta Tags --><meta content="width=(device-width; initial-scale=1.0;)maximum-scale=1.0;" name="viewport"><!-- CSS --><link href="public/stylesheets/css/style.css" rel="stylesheet" type="text/css"></head><body><div id="container"><h1>Gravityframework</h1><p>Gravity is a framework for building better websites.</p><p>Get started by running "rake sass" at the terminal to start watching the sass files</p></div><script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script><script src="http://ajax.cdnjs.com/ajax/libs/underscore.js/1.1.6/underscore-min.js"></script><script src="http://ajax.cdnjs.com/ajax/libs/backbone.js/0.3.3/backbone-min.js"></script><script src="public/javascripts/application.js"></script></body></html>
+<!DOCTYPE html>
+<html class="no-js" lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <title>Project Title</title>
+    <meta name="description" />
+    <meta name="author" />
+    <script src="http://html5shim.googlecode.com/svn/trunk/html5.js">
+    </script>
+    <meta content="width=(device-width; initial-scale=1.0;)maximum-scale=1.0;" name="viewport" />
+    <link href="public/stylesheets/css/style.css" rel="stylesheet" type="text/css" />
+  </head>
+  <body>
+    <div class="container">
+      <h1 class="center">Gravity CSS</h1>
+      <hr />
+      <section>
+        <h3>Paragraphs</h3>
+        <div class="span-4">
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+          <p>
+            <strong>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</strong>
+          </p>
+          <pre><code>This is a code block</code></pre>
+        </div>
+        <div class="span-4">
+          <p>
+            <b>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</b>
+          </p>
+          <p>
+            <a>This is a link</a>
+          </p>
+          <p>
+            <i>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</i>
+          </p>
+        </div>
+        <div class="span-4">
+          <p>
+            <small>Small text. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </small>
+          </p>
+          <q>Quote. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</q>
+        </div>
+      </section>
+      <hr />
+      <section>
+        <div class="span-4">
+          <h1>Misc Elements</h1>
+          <p>
+            <del>Strike through</del>
+          </p>
+        </div>
+        <div class="span-8">
+          <blockquote>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.  styles. </blockquote>
+        </div>
+      </section>
+      <hr />
+      <section>
+        <h3>Headings</h3>
+        <div class="span-4">
+          <h1>Heading 1</h1>
+          <h2>Heading 2</h2>
+          <h3>Heading 3</h3>
+          <h4>Heading 4</h4>
+          <h5>Heading 5</h5>
+          <h6>Heading 6</h6>
+        </div>
+        <div class="span-4">
+          <h1>Lorem ipsum dolor sit amet</h1>
+          <h2>Lorem ipsum dolor sit amet</h2>
+          <h3>Lorem ipsum dolor sit amet</h3>
+          <h4>Lorem ipsum dolor sit amet</h4>
+          <h5>Lorem ipsum dolor sit amet</h5>
+          <h6>Lorem ipsum dolor sit amet</h6>
+        </div>
+        <div class="span-4">
+          <h1>Heading 1</h1>
+          <hr />
+          <h2>Heading 2</h2>
+          <hr />
+          <h3>Heading 3</h3>
+          <hr />
+          <h4>Heading 4</h4>
+          <hr />
+          <h5>Heading 5</h5>
+          <hr />
+          <h6>Heading 6</h6>
+          <hr />
+        </div>
+      </section>
+      <hr />
+      <section>
+        <div class="span-4">
+          <h3>Forms</h3>
+          <p>Default forms. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+          <ul class="input-list">
+            <li>
+              <input type="radio">Radio button 1</input>
+            </li>
+            <li>
+              <input type="radio">Another</input>
+            </li>
+            <li>
+              <input type="radio">Radio 3</input>
+            </li>
+          </ul>
+          <label>Password input</label>
+          <input type="password" value="password" />
+          <input type="search" />
+        </div>
+        <div class="span-8">
+          <form>
+            <label>Text input</label>
+            <input type="text" />
+            <label>Email input</label>
+            <input type="email" />
+            <label>Select</label><select><option>First</option><option>Second</option><option>Third</option></select>
+            <h3>Stacked Checkboxes</h3>
+            <ul class="input-list">
+              <li>
+                <input type="checkbox">Checkbox</input>
+              </li>
+              <li>
+                <input type="checkbox">List item</input>
+              </li>
+              <li>
+                <input type="checkbox">Another item</input>
+              </li>
+            </ul>
+            <label>Textarea</label><textarea></textarea>
+          </form>
+        </div>
+      </section>
+      <hr />
+      <section>
+        <h3>Lists</h3>
+        <div class="span-3">
+          <ul>
+            <li>Some long text. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Lorem ipsum dolor sit amet, consectetur adipisicing elit.</li>
+            <li>Unordered list test</li>
+            <li>
+              <Some>item</Some>
+              <ul>
+                <li>Unordered list test</li>
+                <li>Another item</li>
+                <li>Sub item</li>
+              </ul>
+            </li>
+            <li>Final list item</li>
+          </ul>
+        </div>
+        <div class="span-3">
+          <ol>
+            <li>Item 1</li>
+            <li>
+              <Nested>ol</Nested>
+              <ol>
+                <li>Nested item</li>
+                <li>Another one</li>
+              </ol>
+            </li>
+            <li>Item 2</li>
+            <li>
+              <Item>3</Item>
+              <ul>
+                <li>Sub item</li>
+              </ul>
+            </li>
+          </ol>
+        </div>
+        <div class="span-3">
+          <dl>
+            <dt>Lorem ipsum dolor sit amet, consectetur adipisicing elit adipisicing elit adipisicing elit</dt>
+            <dd>Item 1</dd>
+          </dl>
+          <dl>Some title
+             Item 2
+             Item 3</dl>
+        </div>
+        <div class="span-3">
+          <ul class="unstyled">
+            <li>Unstyled items</li>
+            <li>Another unstyled list item</li>
+            <li>
+              <Some>text</Some>
+              <ul>
+                <li>Sub item in list</li>
+                <li>Another sub item</li>
+              </ul>
+            </li>
+          </ul>
+        </div>
+      </section>
+      <hr />
+      <section>
+        <h3>Tabular Data</h3>
+        <div class="span-12">
+          <table>
+            <thead>
+              <tr>
+                <th>Name</th>
+                <th>Address</th>
+                <th>Email</th>
+              </tr>
+              <tr>
+                <td>Owain</td>
+                <td>Somewhere Park</td>
+                <td>owain@owainlewis.com</td>
+              </tr>
+              <tr>
+                <td>Lorem</td>
+                <td>Ipsume</td>
+                <td>Dolor</td>
+              </tr>
+              <tr>
+                <td>Owain</td>
+                <td>Somewhere Park</td>
+                <td>owain@owainlewis.com</td>
+              </tr>
+              <tr>
+                <td>Lorem</td>
+                <td>Ipsume</td>
+                <td>Dolor</td>
+              </tr>
+            </thead>
+          </table>
+        </div>
+      </section>
+      <section>
+        <h3>Buttons</h3>
+        <a class="button">Submit</a><a class="button delete">Delete</a><a class="button main">Default button</a>
+      </section>
+    </div>
+  </body>
+</html>
